# python-template

./: .gitignore  .gitlab-ci.yml  .gitreview  README  README.md  README_DEV.rst  cookiecutter.json  copier.yml  example-answers.yml  setup.py  tox.ini
docs/: explanations.md  how-to.md  index.md  tutorials.md
extensions/: context.py
hooks/: post_gen_project.py  pre_gen_project.py
template/: .auto-changelog.jinja  .codespellrc.jinja  .coveragerc.jinja  .gitignore  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  LICENSE.txt.jinja  README.md.jinja  (+14 more)
{{cookiecutter.project_name}}/: .auto-changelog  .auto-changelog-template.hbs  .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE.txt  README.md  README.rst  default.nix  package.json  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: publish-sdist.yml  run-tox.yml
{{cookiecutter.project_name}}/doc/source/: api_ref.rst  conf.py  index.rst
{{cookiecutter.project_name}}/extra/bbp-nixpkgs/bbp/nse/{{cookiecutter.project_name}}/: default.nix
{{cookiecutter.project_name}}/extra/jjb-nse/: nse.{{cookiecutter.project_name}}.yaml
{{cookiecutter.project_name}}/extra/jjb-{{ cookiecutter.team_name }}/: {{ cookiecutter.team_name }}.{{cookiecutter.project_name}}.yaml
{{cookiecutter.project_name}}/tests/: __init__.py  test_example.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  example.py  version.py
(+78 files in other folders)
