# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.black]
line-length = 100
target-version = [{% if cookiecutter.support_py37 == 'yes' %}
    'py37',{% endif %}
    'py38',
    'py39',
]
include = '{{ cookiecutter.package_name }}\/.*\.py$|tests\/.*\.py$|doc\/source\/conf\.py$|setup\.py$'

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true
